--- a/intro/index.html
+++ b/intro/index.html
@@ -87,8 +87,24 @@
         </section>
 
         <section>
-          <h1>code spins!</h1>
+          <h1>code</h1>
+          <h2><a target="_blank"
+                 href="https://github.com/aronatkins/cc/blob/gh-pages/intro/index.html">
+              made this
+            </a></h2>
+          <pre><code>&lt;section&gt;
+  &lt;h1&gt;code&lt;/h1&gt;
+  &lt;h2&gt;&lt;a target="_blank" href="https://github.com/aronatkins/cc/"&gt;
+    made this
+  &lt;/a&gt;&lt;/h2&gt;
+&lt;/section&gt;
+</code></pre>
+        </section>
+
+        <section class="click-hanna">
+          <h1>code</h1>
           <img id="hanna" src="images/hanna.jpg"/>
+          <h2>makes things spin!</h2>
         </section>
 
         <section>
@@ -170,23 +186,25 @@
       });
     </script>
     <script>
-      $('#hanna').click(function() {
-var interval = null;
-    var counter = 0;
-    var $this = $(this);
-    clearInterval(interval);
- 
-    interval = setInterval(function(){
-        if (counter != -360) {
+      function spinhanna() {
+        spinit($('#hanna'));
+      }
+      function spinit($this) {
+        var counter = 0;
+        function spinOneDegree() {
+          if (counter != -360) {
             counter -= 1;
             $this.css({
-                MozTransform: 'rotate(-' + -counter + 'deg)',
-                WebkitTransform: 'rotate(' + -counter + 'deg)',
-                transform: 'rotate(' + -counter + 'deg)'
+              MozTransform: 'rotate(-' + -counter + 'deg)',
+              WebkitTransform: 'rotate(' + -counter + 'deg)',
+              transform: 'rotate(' + -counter + 'deg)'
             });
+            setTimeout(spinOneDegree, 10);
+          }
         }
-    }, 10);
-      });
+        spinOneDegree();
+      }
+      $('.click-hanna').click(spinhanna);
     </script>
   </body>
 </html>
