--- a/intro/index.html
+++ b/intro/index.html
@@ -172,7 +172,7 @@
         progress: true,
         history: true,
         center: true,
-        transition: 'slide', // none/fade/slide/convex/concave/zoom
+        transition: 'zoom', // none/fade/slide/convex/concave/zoom
 
         // Optional reveal.js plugins
         dependencies: [
