--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <title>Stratton Coding Club</title>
+    <style>
+      body {
+        font-family: sans-serif;
+      }
+    </style>
   </head>
   <body>
     <h1>Stratton Coding Club</h1>
 
     <a href="intro">intro</a>
+    <a href="lottery">lottery program</a>
   </body>
 </html>
