--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <h1>Stratton Coding Club</h1>
 
-    <a href="intro">intro</a>
-    <a href="lottery">lottery program</a>
+    <ul>
+      <li><a href="intro">intro</a></li>
+      <li><a href="lottery">lottery program</a></li>
+    </ul>
   </body>
 </html>
