--- a/lottery/index.html
+++ b/lottery/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>m choose n</title>
-    <style>
-      body {
-        font-family: sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="lottery.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script type="text/javascript" src="lottery.js"></script>
   </head>
   <body>
-    <h1>m choose n</h1>
-    <p>Given N things in a list, randomly choose M of them.</p>
-    <form id="lottery">
-      <textarea name="in" rows="20" cols="40"></textarea>
-      <textarea name="out" rows="20" cols="40"></textarea>
-      <br>
-      <label>number to choose: <input name="n" type="number" value="2"></label>
-      <input type="submit" value="choose 'em or lose 'em">
-    </form>
+    <div id="chooser">
+      <h1>n choose k</h1>
+      <p>
+        Given N things in a list, randomly choose K of them.
+        Maybe you have a list of students and want to choose 25 of them for
+        participation in a coding club. Problem solved.
+      </p>
+      <form id="lottery">
+        <textarea name="in" rows="20" cols="20"></textarea>
+        <textarea name="out" rows="20" cols="20"></textarea>
+        <br>
+        <label>Number: <input name="k" type="number" value="2"></label>
+        <input type="submit" value="Choose away!">
+      </form>
+      <div id="error"></div>
+    </div>
   </body>
 </html>
