show the unchosen

--- a/lottery/index.html
+++ b/lottery/index.html
@@ -15,9 +15,14 @@
         Maybe you have a list of students and want to choose 25 of them for
         participation in a coding club. Problem solved.
       </p>
+      <p>
+        Input lines into first box. Push the button. Chosen items are in the
+        second box. Unchosen items land into the third.
+      </p>
       <form id="lottery">
         <textarea name="in" rows="20" cols="20"></textarea>
         <textarea name="out" rows="20" cols="20"></textarea>
+        <textarea name="losers" rows="20" cols="20"></textarea>
         <br>
         <label>Number: <input name="k" type="number" value="2"></label>
         <input type="submit" value="Choose away!">
