--- a/lottery/index.html
+++ b/lottery/index.html
@@ -28,6 +28,23 @@
         <input type="submit" value="Choose away!">
       </form>
       <div id="error"></div>
+      <p>
+        This makes no allowances for things like:
+        <ul>
+          <li>
+            giving items a higher probability of being chosen
+          </li>
+          <li>
+            allowing items to fill multiple slots (such as could be the case
+            if you wanted to include all siblings should one be chosen)
+          </li>
+        </ul>
+      </p>
+      <p>
+        If you wish to see how this was made, you can
+        always <a href="https://github.com/aronatkins/cc/tree/gh-pages/lottery">view
+        the source</a>.
+      </p>
     </div>
   </body>
 </html>
