--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
       body {
         font-family: sans-serif;
+        margin: 50px;
       }
     </style>
   </head>
@@ -14,6 +15,7 @@
 
     <ul>
       <li><a href="intro">intro</a></li>
+      <li><a href="resources">resources</a></li>
       <li><a href="lottery">lottery program</a></li>
     </ul>
   </body>
