--- a/resources/index.html
+++ b/resources/index.html
@@ -9,9 +9,8 @@
     <h1>Coding Club Resources</h1>
     <p>
       These are some resources to get you started if you are thinking about
-      exposing your child to programming. There are too many laundry lists of
-      programming resources out there. These are what we have found most
-      helpful (and will likely be using with the Stratton Coding Club).
+      exposing your child to programming. We have found them helpful (and will
+      likely be seen in the Stratton Coding Club).
     </p>
     <dl>
       <dt><a href="https://code.org">code.org</a></dt>
