--- a/resources/index.html
+++ b/resources/index.html
@@ -21,12 +21,17 @@
         explore.
       </dd>
 
-      <dt><a href="https://scratch.mit.edu">scratch</a></dt>
+      <dt><a href="https://scratch.mit.edu">Scratch</a></dt>
       <dd>
         Scratch is a project of the MIT Media Lab that helps young people
         learn to code. Best suited for slightly older students, Scratch offers
         a very similar program-building environment to Code.org and should be
         a good next-step.
+      </dd>
+      <dt><a href="http://www.scratchjr.org">Scratch Jr</a></dt>
+      <dd>
+        Scratch Jr is a version of Scratch tailored for younger children
+        (5-7). Available as an app for iOS and Android tablets.
       </dd>
 
       <dt>Other options</dt>
