parents. algorithm. strike some fragments.

--- a/intro/index.html
+++ b/intro/index.html
@@ -41,12 +41,17 @@
     <div class="reveal">
       <div class="slides">
 	<section>
-	  <h1>Stratton School</h1>
-	  <h3>Coding Club</h3>
+	  <h3>Stratton School</h3>
+	  <h1>Coding Club</h1>
 	</section>
 
         <section>
-          we get to play with computers.
+          <h3>for the parents</h3>
+          <ul>
+            <li>every other session (non-K)</li>
+            <li>unplugged activity ideas</li>
+          </ul>
+          
         </section>
         
         <section>
@@ -106,10 +111,8 @@
 
         <section>
           <h1>Code</h1>
-          <div class="fragment">
-            <h2>lets you</h2>
-            <h3>be in charge!</h3>
-          </div>
+          <h2>lets you</h2>
+          <h3>be in charge!</h3>
         </section>
 
         <section>
@@ -118,8 +121,16 @@
         </section>
 
         <section>
-          <h3>glad that got</h3>
-          <h1 class="fragment"><a target="_blank" href="http://www.sorting-algorithms.com/random-initial-order">sorted!</a></h1>
+          <section>
+            <h3>glad that got</h3>
+            <h1><a target="_blank" href="http://www.sorting-algorithms.com/random-initial-order">sorted!</a></h1>
+          </section>
+          <section>
+            <h1>algorithm</h1>
+            <p>
+              instructions to solve a problem
+            </p>
+          </section>
         </section>
 
         <section>
