11-4 coding club meeting

--- a/2015-11-04/index.html
+++ b/2015-11-04/index.html
@@ -6,9 +6,9 @@
     <title>Stratton Coding Club</title>
 
     <meta name="description"
-          content="First overview presentation for the Stratton
+          content="First younger group presentation for the Stratton
                    Elementary School Coding Club">
-    <meta name="author" content="Aron Atkins">
+    <meta name="author" content="Barbara Atkins">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -43,134 +43,73 @@
 	<section>
 	  <h3>Stratton School</h3>
 	  <h1>Coding Club</h1>
+    <h3>Nov. 4, 2015</h3>
 	</section>
 
         <section>
-          <h3>for the parents</h3>
+          <h3>Follow-up from last time</h3>
           <ul>
-            <li>every other session (non-K)</li>
-            <li>unplugged activity ideas</li>
+            <li>Any questions about what we did?</li>
+            <li>Anything tricky?</li>
+            <li>Any problems with using code.org?</li>
+            <li>Who used it at home?</li>
           </ul>
-
         </section>
 
         <section>
-          <h2>what is</h2>
-          <h1>code?</h1>
-        </section>
-
-        <section class="introductions">
-          <div class="intro">
-            <h1>code</h1>
-            <h3>makes introductions</h3>
-          </div>
-          <div class="outro">
-            <h3>Hi! I'm</h3>
-            <h1>Mr. Atkins<h1>
-          </div>
-        </section>
-
-        <section>
-          <h1>uryyb, jbeyq!</h1>
-          <h3>code has secrets</h3>
-        </section>
-
-        <section>
-          <h1>uryyb, jbeyq!</h1>
-          <pre class="bigcode"><code>function r(a){
-  var rotated = 97+((a.charCodeAt(0)-97+13)%26);
-  return String.fromCharCode(rotated);
-}
-
-"uryyb, jbeyq!".replace(/[a-z]/g,r);
-=&gt; "hello, world!"
-</code></pre>
-          <h1>hello, world!</h1>
-        </section>
-
-        <section>
-          <h1>code</h1>
-          <h2><a target="_blank"
-                 href="https://github.com/aronatkins/cc/blob/gh-pages/intro/index.html">
-              made this
-            </a></h2>
-          <pre><code>&lt;section&gt;
-  &lt;h1&gt;code&lt;/h1&gt;
-  &lt;h2&gt;&lt;a target="_blank" href="https://github.com/aronatkins/cc/"&gt;
-    made this
-  &lt;/a&gt;&lt;/h2&gt;
-&lt;/section&gt;
-</code></pre>
-        </section>
-
-        <section class="click-hanna">
-          <h1>code</h1>
-          <img id="hanna" src="images/hanna.jpg"/>
-          <h2>makes things spin!</h2>
-        </section>
-
-        <section>
-          <h1>Code</h1>
-          <h2>lets you</h2>
-          <h3>be in charge!</h3>
-        </section>
-
-        <section>
-          <h2>who wants to be</h2>
-          <h1>in charge?</h1>
+          <h1>Today's topic:</h1>
+          <h1>Pair Programming</h1>
         </section>
 
         <section>
           <section>
-            <h3>glad that got</h3>
-            <h1><a target="_blank" href="http://www.sorting-algorithms.com/random-initial-order">sorted!</a></h1>
+            <h1>What is a program?</h1>
           </section>
           <section>
-            <h1>algorithm</h1>
-            <p>
-              instructions to solve a problem
-            </p>
+            <h1>A program<h1>
+              <h2>is a set of instructions that can be run by a machine.</h2>
           </section>
         </section>
 
         <section>
-          <h1>code</h1>
-          <h2>is everywhere</h2>
+          <h1>Pair Programming</h1>
+          <h3>
+<a target="_blank"
+                 href="https://www.youtube.com/watch?v=vgkahOzFH2Q">
+              Pair Programming Video</a>
+          </h3>
         </section>
 
-        <section>
-          <img src="images/iphone.jpg"/>
-        </section>
-        <section>
-          <img src="images/youtube.png"/>
-        </section>
-        <section>
-          <img src="images/car.jpg"/>
-        </section>
-        <section>
-          <img src="images/rover.jpg"/>
-        </section>
-        <section>
-          <img src="images/game-shoes.gif"/>
-        </section>
+
 
         <section>
-          <h1>anyone</h1>
-          <h2>can code</h2>
+          <h1>Let's Pair!</h1>
+          <ul>
+          <li>Find a partner that is NOT in your grade</li>
+          <li>Pick a driver and a navigator <br/>
+            (Don't worry.  We'll switch!)</li>
+          <li>Work on the code.org exercises together.</li>
+        </ul>
         </section>
 
-        <section>
-          <h2>code.org</h2>
-          <a target="_blank" href="http://code.org"><img src="images/courses.png"/></a>
+
+    <section>
+          <h2>Reminder: <br/>
+            Pair Programming Rules</h2>
+          <ul>
+          <li>DO: Be respectful</li>
+          <li>DO: Talk to one another about the work.</li>
+          <li>DO: Explain what you are doing</li>
+          <li>DO: Think ahead and make suggestions</li>
+          <li>DO: Switch roles often.</li>
+          <li>DON'T: Be a bossy navigator.</li>
+          <li>DON'T: Grab the driver's mouse/keyboard/tablet</li>
+        </ul>
+        <br/>
+        <h3>And have fun!</h3>
         </section>
 
-        <section>
-          <a target="_blank" href="http://studio.code.org/sections/YTYWHC"><img src="images/test-user.png"/></a>
-        </section>
 
-        <section>
-          <a target="_blank" href="http://code.org"><img src="images/code-logo-640x640.png"/></a>
-        </section>
       </div>
     </div>
 
