Added 11-4 class to index

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       <li><a href="intro">intro</a></li>
       <li><a href="resources">resources</a></li>
       <li><a href="lottery">lottery program</a></li>
+      <li><a href="2015-11-04">11-04-15 meeting</a></li>
+
     </ul>
   </body>
 </html>
