updates based on review

--- a/2015-11-04/index.html
+++ b/2015-11-04/index.html
@@ -46,30 +46,39 @@
     <h3>Nov. 4, 2015</h3>
 	</section>
 
-        <section>
-          <h3>Follow-up from last time</h3>
-          <ul>
-            <li>Any questions about what we did?</li>
-            <li>Anything tricky?</li>
-            <li>Any problems with using code.org?</li>
-            <li>Who used it at home?</li>
-          </ul>
-        </section>
+      <section>
+          <h1>What did we do last week?</h1>
+      </section>
+
+
+      <section>
+          <h1>What was fun?</h1>
+      </section>
+
+
+     <section>
+          <h1>What was tricky?</h1>
+      </section>
+
+
+     <section>
+          <h1>Who used it at home?</h1>
+      </section>
 
         <section>
           <h1>Today's topic:</h1>
           <h1>Pair Programming</h1>
         </section>
 
-        <section>
           <section>
             <h1>What is a program?</h1>
           </section>
+
+
           <section>
             <h1>A program<h1>
               <h2>is a set of instructions that can be run by a machine.</h2>
           </section>
-        </section>
 
         <section>
           <h1>Pair Programming</h1>
@@ -88,13 +97,16 @@
           <li>Find a partner that is NOT in your grade</li>
           <li>Pick a driver and a navigator <br/>
             (Don't worry.  We'll switch!)</li>
-          <li>Work on the code.org exercises together.</li>
         </ul>
         </section>
 
+<section>
+          <h1>Goal:</h1>
+          <h3> Code.org Stages 3 & 4 </h3>
+      </section>
 
     <section>
-          <h2>Reminder: <br/>
+          <h2>
             Pair Programming Rules</h2>
           <ul>
           <li>DO: Be respectful</li>
