--- a/2015-11-04/index.html
+++ b/2015-11-04/index.html
@@ -84,7 +84,7 @@
           <h1>Pair Programming</h1>
           <h3>
 <a target="_blank"
-                 href="https://www.youtube.com/watch?v=vgkahOzFH2Q">
+                 href="https://www.youtube.com/v/vgkahOzFH2Q" >
               Pair Programming Video</a>
           </h3>
         </section>
