more video stuff

--- a/2015-11-04/index.html
+++ b/2015-11-04/index.html
@@ -85,8 +85,14 @@
           <h3>
 <a target="_blank"
                  href="https://www.youtube.com/v/vgkahOzFH2Q" >
-              Pair Programming Video</a>
+              YouTube</a>
           </h3>
+
+<a target="_blank"
+                 href="https://s3.amazonaws.com/videos.code.org/2015/social/pair-programming.mp4" >
+              Backup</a>
+
+
         </section>
 
 
