--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li><a href="resources">resources</a></li>
       <li><a href="lottery">lottery program</a></li>
       <li><a href="2015-11-04">11-04-15 meeting</a></li>
-
+      <li><a href="2015-11-18">11-04-18 meeting</a></li>
     </ul>
   </body>
 </html>
