--- a/2015-11-18/index.html
+++ b/2015-11-18/index.html
@@ -100,8 +100,9 @@
 
         <section>
           <h1>Goal:</h1>
-          <h3>code.org</h3>
           <h3>Stages 3 (mazes) & 4 (artist)</h3>
+          <h2>&nbsp;</h2>
+          <h4 style="text-transform: none">https://studio.code.org/sections/VJWMRC</h4>
         </section>
 
         <section>
