--- a/2015-11-18/index.html
+++ b/2015-11-18/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Stratton Coding Club</title>
+    <title>Stratton Coding Club: 2015-11-18 (3-5)</title>
 
     <meta name="description"
-          content="First older group presentation for the Stratton
-                   Elementary School Coding Club">
+          content="Stratton Elementary School Coding Club: 2015-11-18 (3-5)">
     <meta name="author" content="Aron Atkins">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
