--- a/2015-11-04/index.html
+++ b/2015-11-04/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Stratton Coding Club</title>
+    <title>Stratton Coding Club: 2015-11-04 (k-2)</title>
 
     <meta name="description"
-          content="First younger group presentation for the Stratton
-                   Elementary School Coding Club">
+          content="Stratton Elementary School Coding Club: 2015-11-04 (k-2)">
     <meta name="author" content="Barbara Atkins">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
