--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <li><a href="intro">intro</a></li>
       <li><a href="resources">resources</a></li>
       <li><a href="lottery">lottery program</a></li>
-      <li><a href="2015-11-04">11-04-15 meeting</a></li>
-      <li><a href="2015-11-18">11-04-18 meeting</a></li>
+      <li><a href="2015-11-04">11-04-15 (k-2) meeting</a></li>
+      <li><a href="2015-11-18">11-04-18 (3-5) meeting</a></li>
+      <li><a href="2015-11-25">11-04-25 (k-2) meeting</a></li>
     </ul>
   </body>
 </html>
