width based on viewport

--- a/2015-12-02/index.html
+++ b/2015-12-02/index.html
@@ -60,10 +60,10 @@
           <h3>when this ... then that!</h3>
         </section>
         <section>
-            <img src="directions.png" style="transform: scale(1.5);">
+            <img src="directions.png" style="width:80vw;">
         </section>
         <section>
-            <img src="points.png" style="transform: scale(1.5);">
+            <img src="points.png" style="width:80vw;">
         </section>
         
         <section>
