--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <li><a href="2015-11-18">2015-11-18 (3-5) meeting</a></li>
       <li><a href="2015-11-25">2015-11-25 (k-2) meeting</a></li>
       <li><a href="2015-12-02">2015-12-02 (3-5) meeting</a></li>
+      <li><a href="2015-12-09">2015-12-09 (k-2) meeting</a></li>
     </ul>
   </body>
 </html>
