note about sharing games

--- a/2015-12-09/index.html
+++ b/2015-12-09/index.html
@@ -58,6 +58,10 @@
         <section>
             <img src="points.png" style="width:80vw;">
         </section>
+
+        <section data-background="muppet-pair.png">
+          <h1 style="color:rgb(0,255,0);">Swap games and play!</h1>
+        </section>
         
         <section>
           <h2 style="text-transform: none">hourofcode.com/sw</h2>
