--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=2">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Stratton Coding Club</title>
     <style>
       body {
         font-family: sans-serif;
         margin: 50px;
+      }
+      li {
+        padding-bottom: 0.5em;
       }
     </style>
   </head>
