2015-12-16 prez. update hourofcode links to the blockly version. screens to match.

--- a/2015-11-25/index.html
+++ b/2015-11-25/index.html
@@ -58,7 +58,7 @@
         <section data-background="sw.jpg">
           </section>
         <section>
-          <a href="http://hourofcode.com/sw"><h2 style="text-transform: none">hourofcode.com/sw</h2></a>
+          <a href="http://hourofcode.com/star"><h2 style="text-transform: none">hourofcode.com/star</h2></a>
         </section>
       </div>
     </div>
