--- a/2015-12-16/index.html
+++ b/2015-12-16/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Stratton Coding Club: 2015-12-09 (k-2)</title>
+    <title>Stratton Coding Club: 2015-12-16 (3-5)</title>
 
     <meta name="description"
-          content="Stratton Elementary School Coding Club: 2015-12-09 (k-2)">
+          content="Stratton Elementary School Coding Club: 2015-12-16 (3-5)">
     <meta name="author" content="Aron Atkins">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -41,7 +41,7 @@
         <section>
 	  <h3>Stratton School</h3>
 	  <h1>Coding Club</h1>
-          <h3>Dec. 09, 2015</h3>
+          <h3>Dec. 16, 2015</h3>
 	</section>
 
         <section data-background="bb8.png" data-background-size="contain">
@@ -68,7 +68,7 @@
           <br>
           <br>
           <br>
-          <h3 style="text-transform: none">studio.code.org/sections/YTYWHC</h3>
+          <h3 style="text-transform: none">studio.code.org/sections/VJWMRC</h3>
         </section>
       </div>
     </div>
