--- a/2015-12-02/index.html
+++ b/2015-12-02/index.html
@@ -67,7 +67,7 @@
         </section>
         
         <section>
-          <a href="http://hourofcode.com/sw"><h2 style="text-transform: none">hourofcode.com/sw</h2></a>
+          <a href="http://hourofcode.com/star"><h2 style="text-transform: none">hourofcode.com/star</h2></a>
         </section>
       </div>
     </div>
