--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="2015-11-25">2015-11-25 (k-2) meeting</a></li>
       <li><a href="2015-12-02">2015-12-02 (3-5) meeting</a></li>
       <li><a href="2015-12-09">2015-12-09 (k-2) meeting</a></li>
+      <li><a href="2015-12-16">2015-12-16 (3-5) meeting</a></li>
     </ul>
   </body>
 </html>
