--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
     <h1>Stratton Coding Club</h1>
 
     <ul>
-      <li><a href="intro">intro</a></li>
       <li><a href="resources">resources</a></li>
       <li><a href="lottery">lottery program</a></li>
+      <li><a href="2015-10-28-intro">2015-10-28 intro (all)</a></li>
       <li><a href="2015-11-04">2015-11-04 (k-2) meeting</a></li>
       <li><a href="2015-11-18">2015-11-18 (3-5) meeting</a></li>
       <li><a href="2015-11-25">2015-11-25 (k-2) meeting</a></li>
       <li><a href="2015-12-02">2015-12-02 (3-5) meeting</a></li>
       <li><a href="2015-12-09">2015-12-09 (k-2) meeting</a></li>
       <li><a href="2015-12-16">2015-12-16 (3-5) meeting</a></li>
+      <li><a href="2016-01-20">2016-01-20 intro (all new)</a></li>
     </ul>
   </body>
 </html>
