--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <li><a href="2015-12-02">2015-12-02 (3-5) meeting</a></li>
       <li><a href="2015-12-09">2015-12-09 (k-2) meeting</a></li>
       <li><a href="2015-12-16">2015-12-16 (3-5) meeting</a></li>
-      <li><a href="2016-01-20">2016-01-20 intro (all new)</a></li>
+      <li><a href="2016-01-20-intro">2016-01-20 intro (all new)</a></li>
     </ul>
   </body>
 </html>
