--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <li><a href="2015-12-09">2015-12-09 (k-2) meeting</a></li>
       <li><a href="2015-12-16">2015-12-16 (3-5) meeting</a></li>
       <li><a href="2016-01-20-intro">2016-01-20 intro (all new)</a></li>
+      <li><a href="2016-01-27-intro">2016-01-20 intro too (all new)</a></li>
     </ul>
   </body>
 </html>
