--- a/2016-01-27-intro-too/index.html
+++ b/2016-01-27-intro-too/index.html
@@ -67,6 +67,21 @@
           <h1>Who used it at home?</h1>
         </section>
 
+        <section data-background="bb8.png" data-background-size="contain">
+          <h1 style="color:rgb(0,0,0);">droids!</h1>
+        </section>
+
+        <section>
+          <h2 style="color:rgb(252,223,43);">events</h2>
+          <h3>when this ... then that!</h3>
+        </section>
+        <section>
+            <img src="directions.png" style="width:80vw;">
+        </section>
+        <section>
+            <img src="points.png" style="width:80vw;">
+        </section>
+
         <section>
           <h2>Grades K-2</h2>
           <a href="https://studio.code.org/sections/YTYWHC"><h3 style="text-transform: none">studio.code.org/sections/YTYWHC</h3></a>
