--- a/2016-01-27-intro-too/index.html
+++ b/2016-01-27-intro-too/index.html
@@ -67,8 +67,8 @@
           <h1>Who used it at home?</h1>
         </section>
 
-        <section data-background="bb8.png" data-background-size="contain">
-          <h1 style="color:rgb(0,0,0);">droids!</h1>
+        <section data-background="bb8.jpg" data-background-size="contain">
+          <h1 style="color: blue;">BWEEEEP!</h1>
         </section>
 
         <section>
