--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li><a href="2016-01-20-intro">2016-01-20 intro (all new)</a></li>
       <li><a href="2016-01-27-intro-too">2016-01-20 intro too (all new)</a></li>
       <li><a href="2016-02-03">2016-02-03 artists</a></li>
+      <li><a href="2016-02-10">2016-02-10 playlab</a></li>
     </ul>
   </body>
 </html>
