final page tweaks

--- a/2016-02-10/index.html
+++ b/2016-02-10/index.html
@@ -61,6 +61,9 @@
         </section>
 
         <section>
+          <h1>Make a silly story!</h1>
+        </section>
+        <section>
           <img src="playlab_original3.png" style="width:60vw;"/>
         </section>
         <section>
@@ -71,11 +74,10 @@
         </section>
 
         <section>
-          <h1>Make a silly story!</h1>
 
-          <a href="https://studio.code.org/sections/YTYWHC"><h2 style="text-transform: none">studio.code.org/sections/YTYWHC</h2></a>
-
-          <a href="https://studio.code.org"><img src="playlab.png"/></a>
+          <a target="_blank" href="https://studio.code.org"><img style="margin:0;padding:0;background:white;" src="codeorg-studio.png"/></a>
+          <a href="https://studio.code.org/sections/YTYWHC"><h2 style="margin:0;padding:0;text-transform: none">studio.code.org/sections/YTYWHC</h2></a>
+          <a target="_blank" href="https://studio.code.org"><img style="margin:0;padding:0;" src="playlab.png"/></a>
         </section>
         
       </div>
