--- a/2016-02-10/index.html
+++ b/2016-02-10/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="../reveal.js-3.1.0/css/reveal.css">
     <!-- sky -->
-    <link rel="stylesheet" href="../reveal.js-3.1.0/css/theme/moon.css" id="theme">
+    <link rel="stylesheet" href="../reveal.js-3.1.0/css/theme/black.css" id="theme">
 
     <!-- Code syntax highlighting -->
     <link rel="stylesheet" href="../reveal.js-3.1.0/lib/css/zenburn.css">
