tweaks with story ideas

--- a/2016-02-10/index.html
+++ b/2016-02-10/index.html
@@ -61,9 +61,6 @@
         </section>
 
         <section>
-          <h1>Make a silly story!</h1>
-        </section>
-        <section>
           <img src="playlab_original3.png" style="width:60vw;"/>
         </section>
         <section>
@@ -74,7 +71,24 @@
         </section>
 
         <section>
+          <h1>Make a story!</h1>
 
+          <h2>ideas:</h2>
+          <div style="float:left;width:50%;" class="centered">
+            <h3>snow day</h3>
+            <h3>tell a joke</h3>
+          </div>
+          <div style="float:right;width:50%;padding-right:0px;">
+            <h3>sing a song</h3>
+            <h3>fight crime</h3>
+          </div>
+        </section>
+
+        <section>
+          <h1><a target=__blank" href="https://studio.code.org/c/178723491">my best joke</a></h1>
+        </section>
+
+        <section>
           <a target="_blank" href="https://studio.code.org"><img style="margin:0;padding:0;background:white;" src="codeorg-studio.png"/></a>
           <a href="https://studio.code.org/sections/YTYWHC"><h2 style="margin:0;padding:0;text-transform: none">studio.code.org/sections/YTYWHC</h2></a>
           <a target="_blank" href="https://studio.code.org"><img style="margin:0;padding:0;" src="playlab.png"/></a>
