loops. plus a few typo fixes.

--- a/2016-01-20-intro/index.html
+++ b/2016-01-20-intro/index.html
@@ -6,8 +6,7 @@
     <title>Stratton Coding Club</title>
 
     <meta name="description"
-          content="First overview presentation for the Stratton
-                   Elementary School Coding Club">
+          content="Stratton Elementary School Coding Club: 2016-01-20 intro">
     <meta name="author" content="Aron Atkins">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
