--- a/2016-03-02/index.html
+++ b/2016-03-02/index.html
@@ -59,10 +59,21 @@
         <section>
           <h1>loops</h1>
           <h2>do it over</h2>
-          <h2 class="fragment" data-autoslide="1000">and over ...</h2>
-          <h2 class="fragment" data-autoslide="1000">and over ...</h2>
-          <h2 class="fragment" data-autoslide="1000">and over ...</h2>
-          <h2 class="fragment">and over ...</h2>
+
+          <div style="float:left;width:50%;" class="centered">
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+          </div>
+          <div style="float:right;width:50%;padding-right:0px;">
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+            <h3 class="fragment" data-autoslide="500">and over ...</h3>
+            <h3 class="fragment">and over ...</h3>
+          </div>
         </section>
 
         <section>
