--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <li><a href="2016-02-03">2016-02-03 artists</a></li>
       <li><a href="2016-02-10">2016-02-10 playlab</a></li>
       <li><a href="2016-02-24">2016-02-24 playlab</a></li>
+      <li><a href="2016-03-02">2016-03-02 loops</a></li>
     </ul>
   </body>
 </html>
