--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li><a href="2016-02-10">2016-02-10 playlab</a></li>
       <li><a href="2016-02-24">2016-02-24 playlab</a></li>
       <li><a href="2016-03-02">2016-03-02 loops</a></li>
+      <li><a href="2016-03-09">2016-03-09 loops loops</a></li>
     </ul>
   </body>
 </html>
