--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <li><a href="2016-02-24">2016-02-24 playlab</a></li>
       <li><a href="2016-03-02">2016-03-02 loops</a></li>
       <li><a href="2016-03-09">2016-03-09 loops loops</a></li>
-      <li><a href="2016-03-16">2016-03-16 scratch jr/a></li>
+      <li><a href="2016-03-16">2016-03-16 scratch jr</a></li>
     </ul>
   </body>
 </html>
