--- a/2016-03-16/index.html
+++ b/2016-03-16/index.html
@@ -45,35 +45,33 @@
           <h4>16 March 2016</h4>
 	</section>
 
+   <section>
+
+          <h2>Last week:</h2>
+          <h1>Loops</h1>
+
+        </section>
+
         <section>
-             <div style="float:center;width:100%;" class="centered">
-          <h2>This week, <br/>we're going to do<br>something different!</h2>
+
+          <h2>This week:</h2>
           <img src="scratchcat.png" />
-        </div>
+          <h1>something different!</h1>
+
         </section>
 
-        <section>
-
-          <div style="float:left;width:100%;" class="centered">
-          <img src="scratchjr.png">
-
-                      <h1>
-          Scratch
-          Jr!
-        </div>
-        </h1>
+        <section data-background="scratchjr.png" data-background-size="contain">
 
         </section>
 
         <section>
-         <h2>First, <br>let's take <br>a drive...<br/>
-            <img src="drive.png"/>
-          </a>
+         <h2>First, a drive... </h2>
+            <img src="drive.png" style="width:50vw;"/>
         </section>
 
         <section>
-          <h2>Now, <br>it's your turn!<br/>
-            <img src="race.png" />
+          <h2>Now, your turn!</h2>
+            <img src="race.png" style="width:50vw;"/>
         </section>
 
       </div>
