--- a/2016-03-16/index.html
+++ b/2016-03-16/index.html
@@ -45,33 +45,29 @@
           <h4>16 March 2016</h4>
 	</section>
 
-   <section>
-
+        <section>
           <h2>Last week:</h2>
           <h1>Loops</h1>
-
         </section>
 
         <section>
-
           <h2>This week:</h2>
           <img src="scratchcat.png" />
           <h1>something different!</h1>
-
         </section>
 
         <section data-background="scratchjr.png" data-background-size="contain">
-
+          <!-- nothing to see here! -->
         </section>
 
         <section>
-         <h2>First, a drive... </h2>
-            <img src="drive.png" style="width:50vw;"/>
+          <h2>First, a drive... </h2>
+          <img src="drive.png" style="width:50vw;"/>
         </section>
 
         <section>
           <h2>Now, your turn!</h2>
-            <img src="race.png" style="width:50vw;"/>
+          <img src="race.png" style="width:50vw;"/>
         </section>
 
       </div>
