--- a/2016-03-23/index.html
+++ b/2016-03-23/index.html
@@ -57,12 +57,12 @@
 
         <section>
           <h2>First, we're going to make things disappear... </h2>
-          <img src="sunset.png" style="width:50vw;"/>
+          <img src="Sunset.png" style="width:50vw;"/>
         </section>
 
         <section>
           <h2>Then, you'll make them reappear!</h2>
-          <img src="moonrise.png" style="width:50vw;"/>
+          <img src="Moonrise.png" style="width:50vw;"/>
         </section>
 
       </div>
