--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <li><a href="2016-03-02">2016-03-02 loops</a></li>
       <li><a href="2016-03-09">2016-03-09 loops loops</a></li>
       <li><a href="2016-03-16">2016-03-16 scratch jr intro</a></li>
-      <li><a href="2016-03-23">2016-03-16 scratch jr show and hide</a></li>
+      <li><a href="2016-03-23">2016-03-23 scratch jr show and hide</a></li>
+       <li><a href="2016-03-30">2016-03-30 scratch jr msging</a></li>
     </ul>
   </body>
 </html>
