--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
        <li><a href="2016-03-30">2016-03-30 scratch jr msging</a></li>
        <li><a href="2016-04-06">2016-04-06 scratch jr multiple msging</a></li>
        <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
+        <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
     </ul>
   </body>
 </html>
