update to loops

--- a/2016-04-27/index.html
+++ b/2016-04-27/index.html
@@ -57,7 +57,7 @@
 
         <section>
           <h2>Exercise:</h2>
-           <img src="dribble.png" style="width:50vw;"/>
+           <img src="spooky.png" style="width:50vw;"/>
         </section>
 
       </div>
