--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
        <li><a href="2016-04-06">2016-04-06 scratch jr multiple msging</a></li>
        <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
         <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
+         <li><a href="2016-04-27">2016-05-04 scratch jr animate your name</a></li>
+
     </ul>
   </body>
 </html>
