--- a/2016-05-04/index.html
+++ b/2016-05-04/index.html
@@ -6,8 +6,8 @@
     <title>Stratton Coding Club</title>
 
     <meta name="description"
-          content="Stratton Coding Club 2016-03-16">
-    <meta name="author" content="Barbara Atkins">
+          content="Stratton Coding Club 2016-05-04">
+    <meta name="author" content="Aron Atkins">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
     <link rel="stylesheet" href="../reveal.js-3.1.0/css/reveal.css">
-    <link rel="stylesheet" href="../reveal.js-3.1.0/css/theme/sky.css" id="theme">
+    <link rel="stylesheet" href="../reveal.js-3.1.0/css/theme/white.css" id="theme">
 
     <!-- Code syntax highlighting -->
     <link rel="stylesheet" href="../reveal.js-3.1.0/lib/css/zenburn.css">
@@ -34,27 +34,54 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'></script>
+
+    <style>
+    .reveal section img { background:none; border:none; box-shadow:none; }
+    </style>
   </head>
   <body>
     <div class="reveal">
       <div class="slides">
-	<section>
-	  <h3>Stratton School</h3>
-	  <h1>Coding Club</h1>
-          <h4>4 May 2016</h4>
-	</section>
+       <section>
+        <h3>Stratton School</h3>
+        <h1>Coding Club</h1>
+        <h4>4 May 2016</h4>
+      </section>
 
-        <section>
-          <h2>Last time:</h2>
-          <h2>We used loops</h2>
-          <h3>in Scratch Jr</h3>
+      <section>
+        <h1>last week ...</h1>
+      </section>
+
+        <section data-background="loops.jpg">
+          <h1 style="color:white;font-size:4em;">loops</h1>
         </section>
 
         <section>
-          <h1>This week:</h1>
-          <h1>Animate your name!</h1>
+          <h1>this week ...</h1>
         </section>
 
+        <section>
+          <h1>animate</h1>
+          <h3>your</h3>
+          <img src="n.gif"/><img src="a.gif"/><img src="m.gif"/><img src="e.gif"/>
+        </section>
+
+        <section>
+          <h3>ideas</h3>
+          <ul>
+            <li>movement
+            <li>speed
+          </ul>
+          <ul>
+            <li>loops
+            <li>bump
+            <li>messages
+          </ul>
+          <ul>
+            <li>grow/shrink
+            <li>appear/disappear
+          </ul>
+        </section>
       </div>
     </div>
     <script src="../reveal.js-3.1.0/lib/js/head.min.js"></script>
