--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
       <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
       <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
       <li><a href="2016-05-04">2016-05-04 scratch jr animate your name</a></li>
-       <li><a href="2016-03-30">2016-03-30 scratch jr msging</a></li>
-       <li><a href="2016-04-06">2016-04-06 scratch jr multiple msging</a></li>
-       <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
-        <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
-         <li><a href="2016-05-04">2016-05-04 scratch jr animate your name</a></li>
-           <li><a href="2016-05-11">2016-05-11 scratch jr dance party!</a></li>
+      <li><a href="2016-03-30">2016-03-30 scratch jr msging</a></li>
+      <li><a href="2016-04-06">2016-04-06 scratch jr multiple msging</a></li>
+      <li><a href="2016-04-13">2016-04-13 scratch jr free play</a></li>
+      <li><a href="2016-04-27">2016-04-27 scratch jr loops</a></li>
+      <li><a href="2016-05-04">2016-05-04 scratch jr animate your name</a></li>
+      <li><a href="2016-05-11">2016-05-11 scratch jr dance party!</a></li>
+      <li><a href="2016-05-18">2016-05-18 scratch jr music</a></li>
     </ul>
   </body>
 </html>
