scratch jr code relay

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       <li><a href="2016-05-04">2016-05-04 scratch jr animate your name</a></li>
       <li><a href="2016-05-11">2016-05-11 scratch jr dance party!</a></li>
       <li><a href="2016-05-18">2016-05-18 scratch jr music</a></li>
+      <li><a href="2016-05-18">2016-05-25 scratch jr relay</a></li>
     </ul>
   </body>
 </html>
