--- a/index.html
+++ b/index.html
@@ -16,9 +16,25 @@
   <body>
     <h1>Stratton Coding Club</h1>
 
+    <h2>2016-2017</h2>
+    <p>
+      The fall of 2016 started with separate K-2 and 3-5 groups. These
+      presentations are for the K-2 group.
+    </p>
     <ul>
-      <li><a href="resources">resources</a></li>
-      <li><a href="lottery">lottery program</a></li>
+      <li><a href="2016-10-19-intro">2016-10-19 intro</a></li>
+    </ul>
+
+    <h2>2015-2016</h2>
+    <p>
+      In the fall of 2015, we started with every-other-week meetings,
+      alternating between a K-2 group and a 3-5 group (one group of parents
+      teaching both groups). Starting in the winter of 2016, each group
+      started meeting every week (two groups of parents). When we split, I
+      stayed with the K-2 group. This is why there are only 3-5 presentations
+      for the first half of the school year.
+    </p>
+    <ul>
       <li><a href="2015-10-28-intro">2015-10-28 intro (all)</a></li>
       <li><a href="2015-11-04">2015-11-04 (k-2) meeting</a></li>
       <li><a href="2015-11-18">2015-11-18 (3-5) meeting</a></li>
@@ -48,6 +64,12 @@
       <li><a href="2016-05-11">2016-05-11 scratch jr dance party!</a></li>
       <li><a href="2016-05-18">2016-05-18 scratch jr music</a></li>
       <li><a href="2016-05-25">2016-05-25 scratch jr relay</a></li>
+    </ul>
+
+    <h2>misc</h2>
+    <ul>
+      <li><a href="resources">resources</a></li>
+      <li><a href="lottery">lottery program</a></li>
     </ul>
   </body>
 </html>
