tweak broken hanna

--- a/2016-10-19-intro/index.html
+++ b/2016-10-19-intro/index.html
@@ -72,7 +72,7 @@
         <section class="click-broken">
           <h1>code</h1>
           <img id="broken" src="images/hanna.jpg"/>
-          <h2>can be broken</h2>
+          <h2>does not always work</h2>
         </section>
         
         <section>
