--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     </p>
     <ul>
       <li><a href="2016-10-19-intro">2016-10-19 intro</a></li>
+      <li><a href="2016-10-26-bees">2016-10-26 bees</a></li>
     </ul>
 
     <h2>2015-2016</h2>
