--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <ul>
       <li><a href="2016-10-19-intro">2016-10-19 intro</a></li>
       <li><a href="2016-10-26-bees">2016-10-26 bees</a></li>
+      <li><a href="2016-11-02-double-bees">2016-11-02 double bees</a></li>
     </ul>
 
     <h2>2015-2016</h2>
