--- a/2016-11-09-playlab/index.html
+++ b/2016-11-09-playlab/index.html
@@ -6,7 +6,7 @@
     <title>Stratton Coding Club</title>
 
     <meta name="description"
-          content="Stratton Coding Club 2016-02-10">
+          content="Stratton Coding Club 2016-11-09">
     <meta name="author" content="Aron Atkins">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -39,11 +39,10 @@
   <body>
     <div class="reveal">
       <div class="slides">
-	      <section>
-	        <h3>Stratton School</h3>
-	        <h1>Coding Club</h1>
-          <h4>10 Feb 2016</h4>
-	      </section>
+	<section>
+	  <h3>Stratton School</h3>
+	  <h1>Coding Club</h1>
+	</section>
 
         <section>
           <h1><a target="_blank" href="https://studio.code.org/c/178093694">play lab</a></h1>
@@ -89,8 +88,9 @@
         </section>
 
         <section>
-          <a target="_blank" href="https://studio.code.org"><img style="margin:0;padding:0;background:white;" src="codeorg-studio.png"/></a>
-          <a href="https://studio.code.org/sections/YTYWHC"><h2 style="margin:0;padding:0;text-transform: none">studio.code.org/sections/YTYWHC</h2></a>
+          <a target="_blank" href="https://studio.code.org"><img src="poke.png"/></a>
+
+          <h3 style="margin:0;padding:0;text-transform: none">scroll to find ...</h3>
           <a target="_blank" href="https://studio.code.org"><img style="margin:0;padding:0;" src="playlab.png"/></a>
         </section>
         
