--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li><a href="2016-10-19-intro">2016-10-19 intro</a></li>
       <li><a href="2016-10-26-bees">2016-10-26 bees</a></li>
       <li><a href="2016-11-02-double-bees">2016-11-02 double bees</a></li>
+      <li><a href="2016-11-09-playlab">2016-11-09 playlab</a></li>
     </ul>
 
     <h2>2015-2016</h2>
