--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
       <li><a href="2016-10-26-bees">2016-10-26 bees</a></li>
       <li><a href="2016-11-02-double-bees">2016-11-02 double bees</a></li>
       <li><a href="2016-11-09-playlab">2016-11-09 playlab</a></li>
-      <li><a href="2016-11-15-playlab">2016-11-15-playlab</a></li>
+      <li><a href="2016-11-16-playlab">2016-11-16-playlab</a></li>
+      <li><a href="2016-11-30-minecraft">2016-11-30-minecraft</a></li>
     </ul>
 
     <h2>2015-2016</h2>
