--- a/2016-11-30-minecraft/index.html
+++ b/2016-11-30-minecraft/index.html
@@ -71,11 +71,11 @@
         </section>
         <section>
           <img src="mine.png"/>
-          <h6 style="text-transform: none">https://code.org/minecraft</h6>
+          <a target="_blank" href="https://code.org/minecraft"><h6 style="text-transform: none">https://code.org/minecraft</h6></a>
         </section>
         <section>
           <img src="designer.png"/>
-          <h6 style="text-transform: none">https://code.org/minecraft</h6>
+          <a target="_blank" href="https://code.org/minecraft"><h6 style="text-transform: none">https://code.org/minecraft</h6></a>
         </section>
             
       </div>
