wintery and some date fixes

--- a/2016-12-21-wintery/index.html
+++ b/2016-12-21-wintery/index.html
@@ -6,7 +6,7 @@
     <title>Stratton Coding Club</title>
 
     <meta name="description"
-          content="Stratton Coding Club 2016-11-30">
+          content="Stratton Coding Club 2016-11-09">
     <meta name="author" content="Aron Atkins">
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -45,39 +45,20 @@
 	</section>
 
         <section>
-          <h2>last week</h2>
-          <img src="playlab.png"/>
-        </section>
+          <h1>wintery playlab</h1>
 
-        <section data-background="zombie.gif">
-          <h2>this week...</h2>
-          <h1>zombies</h1>
-        </section>
+          Build something wintery.<br/>
+          Use the "ice age" playlab.<br/>
+          <br/>
 
-        <section>
-          <h1>events</h1>
-        </section>
-        
-        <section>
-          <img src="chicken.png"/>
+          Game?
+          Story?
+          Something silly?
         </section>
 
         <section>
-          <img src="cow.png"/>
+          <h1><a href="https://studio.code.org/c/313471711" target="_blank" >here's mine</a></h1>
         </section>
-
-        <section>
-          <img style="background:white;" src="code.png"/>
-        </section>
-        <section>
-          <img src="mine.png"/>
-          <a target="_blank" href="https://code.org/minecraft"><h6 style="text-transform: none">https://code.org/minecraft</h6></a>
-        </section>
-        <section>
-          <img src="designer.png"/>
-          <a target="_blank" href="https://code.org/minecraft"><h6 style="text-transform: none">https://code.org/minecraft</h6></a>
-        </section>
-            
       </div>
     </div>
     <script src="../reveal.js-3.1.0/lib/js/head.min.js"></script>
