--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <li><a href="2016-11-09-playlab">2016-11-09 playlab</a></li>
       <li><a href="2016-11-16-playlab">2016-11-16-playlab</a></li>
       <li><a href="2016-11-30-minecraft">2016-11-30-minecraft</a></li>
+      <li><a href="2016-12-21-wintery">2016-12-21-wintery</a></li>
     </ul>
 
     <h2>2015-2016</h2>
