--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li><a href="2016-11-16-playlab">2016-11-16-playlab</a></li>
       <li><a href="2016-11-30-minecraft">2016-11-30-minecraft</a></li>
       <li><a href="2016-12-21-wintery">2016-12-21-wintery</a></li>
+      <li><a href="2017-01-03-scratch">2017-01-03-scratch</a></li>
     </ul>
 
     <h2>2015-2016</h2>
