better in a separate tab

--- a/2017-01-11-scratch-disappear/index.html
+++ b/2017-01-11-scratch-disappear/index.html
@@ -56,12 +56,12 @@
 
         <section>
           <h2>Time to disappear...</h2>
-          <a href="https://www.scratchjr.org/activities/card06-sun.pdf"><img src="Sunset.png" style="width:50vw;"/></a>
+          <a target="_blank" href="https://www.scratchjr.org/activities/card06-sun.pdf"><img src="Sunset.png" style="width:50vw;"/></a>
         </section>
 
         <section>
           <h2>... and reappear!</h2>
-          <a href="https://www.scratchjr.org/activities/card07-moon.pdf"><img src="Moonrise.png" style="width:50vw;"/></a>
+          <a target="_blank" href="https://www.scratchjr.org/activities/card07-moon.pdf"><img src="Moonrise.png" style="width:50vw;"/></a>
         </section>
 
       </div>
