--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <li><a href="2017-01-03-scratch">2017-01-03-scratch</a></li>
       <li><a href="2017-01-11-scratch-disappear">2017-01-11-scratch-disappear</a></li>
       <li><a href="2017-01-18-scratch-story">2017-01-18-scratch-story</a></li>
+            <li><a href="2017-01-25">2017-01-25-scratch-messaging</a></li>
+
 
     </ul>
 
