--- a/2017-01-25/index.html
+++ b/2017-01-25/index.html
@@ -60,7 +60,7 @@
 
 
     <section>
-          <h2>New blocks this week: </h2>
+          <h2>New blocks this week</h2>
 
           <table width="75%">
             <tr>
